--- a/src/app/html/stock.component.html
+++ b/src/app/html/stock.component.html
@@ -2,7 +2,7 @@
     <div class="dropdown">
         <button (click)="toggleDropDownVisibility('symbolDropDown')" class="dropbtn">Select stock symbol</button>
         <div id="symbolDropDown" class="dropdown-content">
-            <input type="text" placeholder="Search.." id="searchInput" (keyup)="filterStocks()">
+            <input type="text" placeholder="Search.." class="defaultInput searchInput" (keyup)="filterStocks()">
             <ul class="dropList">
                 <li class="itemList" *ngFor="let symbol of stockSymbolList">
                     <span id="{{symbol.Code}}" class="itemDetails" (click)="selectSymbol(symbol)">{{symbol.Code}}</span>
@@ -39,3 +39,4 @@
 </div>
 <stock-prices></stock-prices>
 <social-count></social-count>
+<social-post></social-post>
