--- a/src/styles.css
+++ b/src/styles.css
@@ -13,21 +13,27 @@ html { background-color: #f1f1f1; }
   .dropbtn:hover, .dropbtn:focus {
     background-color: #3e8e41;
   }
+
+  .defaultInput{
+    border-box: box-sizing;
+    font-size: 16px;
+    padding: 5px;
+    border: black;
+    border: 1px solid #ddd;
+  }
   
   /* The search field */
-  #searchInput {
-    border-box: box-sizing;
+  .searchInput {
+    padding: 14px 20px 12px 45px;
+    border: none;
     background-image: url('/../../assets/images/searchicon.png');
     background-position: 14px 12px;
     background-repeat: no-repeat;
-    font-size: 16px;
-    padding: 14px 20px 12px 45px;
-    border: none;
     border-bottom: 1px solid #ddd;
   }
   
   /* The search field when it gets focus/clicked on */
-  #searchInput:focus {outline: 3px solid #ddd;}
+  .searchInput:focus {outline: 3px solid #ddd;}
   
   /* The container <div> - needed to position the dropdown content */
   .dropdown {
